@@ -46,6 +46,20 @@ function getCurrentObjectUrl(){\n
   return window.location.href.split("?")[0];\n
 }\n
 \n
+function toogleLoading(is_toogle, _message) {\n
+  if (is_toogle) {\n
+    var loading_wrapper = $("#loading-wrapper").first();\n
+    toogleLoading.prototype.old_loading_message = loading_wrapper.find(\'p\')[0].textContent;\n
+    loading_wrapper.find(\'p\')[0].textContent = _message;\n
+    loading_wrapper.show();\n
+  }\n
+  else {\n
+    var loading_wrapper = $("#loading-wrapper").first();\n
+    loading_wrapper.hide();\n
+    loading_wrapper.find(\'p\')[0].textContent = toogleLoading.prototype.old_loading_message;\n
+  }\n
+}\n
+\n
 function changeLanguage(language){\n
   $.ajax({\n
      url: "WebSite_changeLanguage?language=" + language,\n
