@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Add method to display dynamic 'loading' information
+
+2011-09-21 gabriel.oliveira
 * Remove 'listbox-title' from header
 
 2011-09-21 gabriel.oliveira
